# humoto

./: .gitmodules  CMakeLists.txt  Makefile  package.xml
bridges/QuadProgpp/: CMakeLists.txt
bridges/ariles/: CMakeLists.txt
bridges/config_msgpack/: CMakeLists.txt
bridges/config_msgpack/interface/: config_msgpack.h
bridges/config_msgpack/interface/config_msgpack/: reader.h  writer.h
bridges/config_yaml/: CMakeLists.txt
bridges/config_yaml/interface/: config_yaml.h
bridges/config_yaml/interface/config_yaml/: reader.h  writer.h
bridges/googletest/: CMakeLists.txt
bridges/obstacle_avoidance/: CMakeLists.txt
bridges/qpOASES/: CMakeLists.txt
bridges/qpOASES/interface/qpoases/: solver.h
bridges/qpmad/: CMakeLists.txt
bridges/qpmad/interface/qpmad/: solver.h
bridges/rbdl/: CMakeLists.txt
cmake/: humotoConfig.cmake.in  humoto_add_external_git_project.cmake  humoto_add_module.cmake  humoto_define_regression_test.cmake  humoto_define_test.cmake  options_all.cmake  options_disablesolvers.cmake
core/include/: config.h  config_accessors.h  config_msgpack.h  config_yaml.h  humoto.h
core/include/ariles/: adapters_all.h  ariles.h  define_accessors.h  helpers.h  process_namespaces.h  reader_base.h
core/include/ariles/adapters/: basic.h  eigen.h  eigen_impl.h  selected.h  std_vector.h  std_vector_impl.h
core/include/config/: compat.h  define_accessors.h  helpers.h  process_namespaces.h  reader.h  reader_base.h  writer.h
core/include/config/reader/: all.h  eigen_decl.h  eigen_impl.h  vector_decl.h  vector_impl.h
core/include/config/writer/: all.h  eigen_decl.h  eigen_impl.h  vector_decl.h  vector_impl.h
core/include/eigentools/: blockmatrix_kronecker.h  eigentools.h
core/include/humoto/: config.h  config_accessors.h  configurable_optimization_problem.h  control_problem.h  humoto.h  kktsolver.h  logger.h  qp_problem.h  solver.h  task.h
core/include/humoto/eigentools/: eigentools.h
core/include/humoto/humoto/: configurable_optimization_problem.h  control_problem.h  hierarchy.h  solution.h  solver.h  task.h
core/include/humoto/rigid_body/: point_mass_state.h  rigid_body_state.h  rotary_state.h
core/include/humoto/walking/: foot_trajectory.h  point_mass_model_6z.h  stance_finite_state_machine.h
core/include/rigid_body/: cubic_polynomial.h
core/include/walking/: foot_trajectory.h  point_mass_model_6z.h  robot_foot_parameters.h  stance_finite_state_machine.h
core/tests/: CMakeLists.txt  regression_test_000.cpp  regression_test_005.cpp  regression_test_006.cpp  test_000.cpp  test_001_unit_0.cpp  test_001_unit_1.cpp
doc/doxygen/: Doxyfile  Doxyfile.input
modules/pepper_ik/include/humoto/pepper_ik/: configurable_optimization_problem.h
modules/pepper_ik/include/pepper_ik/: common.h  generalized_coordinates.h
modules/pepper_ik/tests/: CMakeLists.txt  regression_test_000.cpp  regression_test_001.cpp  test_000.cpp  test_001.cpp  test_002.cpp  test_003.cpp  test_004.cpp
modules/pepper_mpc/include/humoto/pepper_mpc/: common.h  configurable_optimization_problem.h  model_state.h
modules/pepper_mpc/include/pepper_mpc/: model.h  model_state.h
modules/pepper_mpc/tests/: CMakeLists.txt  regression_test_000.cpp  regression_test_000_body.h  regression_test_001.cpp  test_000.cpp  test_001.cpp  test_001_body.h  test_004.cpp  test_005.cpp
modules/wpg04/include/: wpg04.h
modules/wpg04/include/humoto/: wpg04.h
modules/wpg04/include/humoto/wpg04/: common.h  configurable_optimization_problem.h  model.h  model_state.h  mpc_wpg.h  preview_horizon.h  task_comacceleration.h  task_footsteppenalize.h  task_terminalconstraint.h
modules/wpg04/include/wpg04/: common.h  configurable_optimization_problem.h  model.h  mpc_wpg.h  task_comvelocity.h  task_copbounds.h  task_copposition.h  task_copvelocity.h  task_footstepbounds.h  task_footsteppenalize.h  task_referencesolution.h
modules/wpg04/tests/: CMakeLists.txt  regression_test_000.cpp  regression_test_000_body.h  regression_test_001.cpp  regression_test_002.ref  regression_test_007.cpp  test_000.cpp  test_000.yaml  test_005.cpp  test_006.cpp  test_006_process.m
