<?xml version="1.0"?>
<package>
  <name>humoto</name>
  <version>1.1.0</version>
  <description>
    This is Humoto - a software framework for manipulation of linear least-squares problems with (in)equality constraints.
  </description>
  <maintainer email="asherikov@yandex.com">Alexander Sherikov</maintainer>
  <url>https://github.com/bip-team/humoto</url>
  <license>Apache 2.0</license>

  <buildtool_depend>cmake</buildtool_depend>

  <export>
    <build_type>cmake</build_type>
  </export>
</package>
